--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
 
       - uses: actions/checkout@v3
         with:
-          repository: "https://github.com/huonw/pants.git"
+          repository: "huonw/pants"
           ref: "feature/other-remote-caches"
           path: pants
 
