--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,8 @@ jobs:
 
       - uses: actions/checkout@v3
         with:
-          repository: "huonw/pants"
-          ref: "feature/other-remote-caches"
+          repository: "pantsbuild/pants"
+          ref: "huonw/11149-ghac"
           path: pants
 
       - name: Setup | Rust
@@ -30,6 +30,8 @@ jobs:
           python-version: "3.9"
 
       - run: |
+          curl --proto '=https' --tlsv1.2 -fsSL https://static.pantsbuild.org/setup/get-pants.sh | bash
+          echo $HOME/bin >> $GITHUB_PATH
           env
 
         env:
@@ -42,8 +44,8 @@ jobs:
         uses: actions/github-script@v6
         with:
           script: |
-            core.exportVariable('PANTS_REMOTE_GHA_CACHE_URL', process.env.ACTIONS_CACHE_URL || '');
-            core.exportVariable('PANTS_REMOTE_GHA_RUNTIME_TOKEN', process.env.ACTIONS_RUNTIME_TOKEN || '');
+            core.exportVariable('ACTIONS_CACHE_URL', process.env.ACTIONS_CACHE_URL || '');
+            core.exportVariable('ACTIONS_RUNTIME_TOKEN', process.env.ACTIONS_RUNTIME_TOKEN || '');
 
       - name: Cache Rust compilation
         uses: metalbear-co/sccache-action@v1.1.0
@@ -51,9 +53,9 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - run: |
-          ./pants_from_sources -ldebug version
+          MODE=debug PANTS_SOURCE=./pants pants -ldebug version
         working-directory: code
 
       - run: |
-          ./pants_from_sources -ldebug test ::
+          MODE=debug PANTS_SOURCE=./pants pants -ldebug test ::
         working-directory: code
