--- a/pants.toml
+++ b/pants.toml
@@ -1,5 +1,5 @@
 [GLOBAL]
-pants_version = "2.14.0"
+pants_version = "2.17.0"
 
 plugins = ["hdrhistogram"]
 
@@ -9,12 +9,18 @@ backend_packages = [
 
 remote_cache_read = true
 remote_cache_write = true
-remote_store_address = "grpc://whatever"
+remote_store_address = "experimental:github-actions-cache://path/goes/here"
 
 [source]
 root_patterns = [
   "/",
 ]
+
+[python]
+interpreter_constraints = ["==3.9.*"]
+
+[python-infer]
+use_rust_parser = true
 
 [stats]
 log = true
